# PyEC4Xsuite

./: .gitignore  MANIFEST.in  PyEC4XS.py  pyproject.toml  setup.py
PyEC4XS/: LHC_custom.py  PyEC4XS.py  Save_Load_Status.py  Simulation.py  _XsuiteUniformBinSlicer.py  __init__.py  sim_config_manager.py
compare/: Simulation_parameters.py  compare.py  sim_config_manager.py  test_pyht.py  test_xs.py
compare/pyecloud_config/: machine_parameters.input
compare/utils/: make_movie.py  make_side_by_side.py
tests/examples_PyEC4XS/examples_from_PyPARIS_sim_class/001a_simulation_with_eclouds_LHC/: 003_run_single_core.py  004_some_checks.py  005_compare_against_pyparis_sim_class.py  006_rf_phase_convention_diagnostic.py  007_shared_start_machine_compare.py  008_compare_against_pyparis_sim_class_independent_init.py  Simulation_parameters.py
tests/examples_PyEC4XS/examples_from_PyPARIS_sim_class/001a_simulation_with_eclouds_LHC/comparison_against_pyparis_sim_class/pyec4xs/: Simulation_parameters.py
tests/examples_PyEC4XS/examples_from_PyPARIS_sim_class/001a_simulation_with_eclouds_LHC/comparison_against_pyparis_sim_class/pyparis_sim_class/: Simulation_parameters.py
tests/examples_PyEC4XS/from_PyECLOUD/tests_PyEC4XS/: 000_ecloud_instab_sim.py  001_compare_kick_against_headtail.py  002_compare_kick_and_betatron_motion.py  003_compare_xsuite_vs_pyec4pyht.py  common.py
